# linux-api

./: CMakeLists.txt
fileio/: bad_exclusive_open.c  copy.c  file2.txt  large_file.c  seek_io.c  t_readv.c
lib/: ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
proc/: display_env.c  longjmp.c  mem_segments.c  modify_env.c  necho.c  setjmp_vars.c
sockets/: i6d_ucase.h  i6d_ucase_cl.c  i6d_ucase_sv.c  inet_sockets.c  inet_sockets.h  is_seqnum.h  is_seqnum_cl.c  is_seqnum_sv.c  read_line.c  read_line.h  ud_ucase.h  ud_ucase_cl.c  ud_ucase_sv.c  us_abstract_bind.c  us_xfr_cl.c  us_xfr_sv.c
